--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "diemthithpt",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tuongkhai-SPKT-IT.github.io/diemthi-thptqg2022/",
+  "homepage": "http://tuongkhai-SPKT-IT.github.io/diemthi-thptqg2022/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -23,11 +23,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
